[tool.poetry]
name = "topasbfieldcheck"
version = "0.1.0"
description = ""
authors = ["brendan <brendan.whelan@sydney.edu.au>"]
readme = "README.md"
packages = [{include = "MagneticFieldMap"}]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.13.1"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
